--- a/mod/area/arnwald32.git.yml
+++ b/mod/area/arnwald32.git.yml
@@ -2096,6 +2096,88 @@ TriggerList:
     YPosition: {type: :float, value: 72.8893}
     ZOrientation: {type: :float, value: 0.0}
     ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 1
+    AutoRemoveKey: {type: :byte, value: 0}
+    Cursor: {type: :byte, value: 1}
+    DisarmDC: {type: :byte, value: 0}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0}
+        PointY: {type: :float, value: 0.0}
+        PointZ: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.0827713012695312}
+        PointY: {type: :float, value: -0.398700714111328}
+        PointZ: {type: :float, value: 0.025000000372529}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.252098083496094}
+        PointY: {type: :float, value: -9.89393615722656}
+        PointZ: {type: :float, value: 0.025000499561429}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.129898071289062}
+        PointY: {type: :float, value: -19.7466468811035}
+        PointZ: {type: :float, value: 0.025000499561429}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 0.134819030761719}
+        PointY: {type: :float, value: -29.6710319519043}
+        PointZ: {type: :float, value: 0.0250005591660738}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 1.59977722167969}
+        PointY: {type: :float, value: -29.8034934997559}
+        PointZ: {type: :float, value: 0.025000499561429}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 1.54039001464844}
+        PointY: {type: :float, value: -19.6743793487549}
+        PointZ: {type: :float, value: 0.025000499561429}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 3
+        PointX: {type: :float, value: 1.47410583496094}
+        PointY: {type: :float, value: 0.206592559814453}
+        PointZ: {type: :float, value: 0.025000000372529}
+    HighlightHeight: {type: :float, value: 0.0}
+    KeyName: {type: :cexostr, value: ""}
+    LinkedTo: {type: :cexostr, value: WP_huegel_s03_o01_w3}
+    LinkedToFlags: {type: :byte, value: 2}
+    LoadScreenID: {type: :word, value: 0}
+    LocalizedName: 
+      type: :cexolocstr
+      str_ref: 14760
+      value: {}
+
+    OnClick: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    PortraitId: {type: :word, value: 0}
+    ScriptHeartbeat: {type: :resref, value: ""}
+    ScriptOnEnter: {type: :resref, value: ""}
+    ScriptOnExit: {type: :resref, value: ""}
+    ScriptUserDefine: {type: :resref, value: ""}
+    Tag: {type: :cexostr, value: Arnwald32toHuegel}
+    TemplateResRef: {type: :resref, value: newtransition}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :int, value: 1}
+    XOrientation: {type: :float, value: 0.0}
+    XPosition: {type: :float, value: 118.3344}
+    YOrientation: {type: :float, value: 0.0}
+    YPosition: {type: :float, value: 49.726}
+    ZOrientation: {type: :float, value: 0.0}
+    ZPosition: {type: :float, value: 0.0}
 WaypointList: 
   type: :list
   value: 
@@ -2207,4 +2289,29 @@ WaypointList:
     XPosition: {type: :float, value: 58.7221}
     YOrientation: {type: :float, value: 0.2667}
     YPosition: {type: :float, value: 48.8727}
+    ZPosition: {type: :float, value: -0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 5
+    Appearance: {type: :byte, value: 1}
+    Description: 
+      type: :cexolocstr
+      value: {}
+
+    HasMapNote: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: ""}
+    LocalizedName: 
+      type: :cexolocstr
+      value: {}
+
+    MapNote: 
+      type: :cexolocstr
+      value: {}
+
+    MapNoteEnabled: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: WP_Arnwald32toHuegel}
+    TemplateResRef: {type: :resref, value: ""}
+    XOrientation: {type: :float, value: -0.9808}
+    XPosition: {type: :float, value: 117.869}
+    YOrientation: {type: :float, value: 0.1951}
+    YPosition: {type: :float, value: 34.8329}
     ZPosition: {type: :float, value: -0.0}
