--- a/mod/area/area017.git.yml
+++ b/mod/area/area017.git.yml
@@ -27,32 +27,34 @@ Door List:
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
     Bearing: {type: :float, value: -0.0}
-    CloseLockDC: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 30}
     Comment: {type: :cexostr, value: ""}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 10}
     Description: 
       type: :cexolocstr
+      str_ref: 9078
       value: {}
 
-    DisarmDC: {type: :byte, value: 0}
+    DisarmDC: {type: :byte, value: 10}
     Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 5}
-    GenericType_New: {type: :dword, value: 0}
+    Fort: {type: :byte, value: 13}
+    GenericType_New: {type: :dword, value: 203}
     HP: {type: :short, value: 10}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: xyz}
-    KeyRequired: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    KeyName: {type: :cexostr, value: key_arnw_westmark}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: arnw_westmark_2_arnwald}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
+      str_ref: 63751
       value: 
-        0: "Haust\xFCr (unbreakable)"
+        0: Wooden Door 01c
     Lockable: {type: :byte, value: 1}
-    Locked: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: door_click}
     OnClosed: {type: :resref, value: door_closed}
     OnDamaged: {type: :resref, value: door_damaged}
@@ -67,15 +69,15 @@ Door List:
     OnTrapTriggered: {type: :resref, value: door_traptrig}
     OnUnlock: {type: :resref, value: door_unlock}
     OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 0}
-    Plot: {type: :byte, value: 1}
-    PortraitId: {type: :word, value: 558}
+    OpenLockDC: {type: :byte, value: 33}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 600}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: Haustrunbreakable}
-    TemplateResRef: {type: :resref, value: door_unbreak}
+    Tag: {type: :cexostr, value: arnwald_2_arnw_westmark}
+    TemplateResRef: {type: :resref, value: ctp_door_01c}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 0}
     TrapFlag: {type: :byte, value: 0}
     TrapOneShot: {type: :byte, value: 1}
     TrapType: {type: :byte, value: 0}
@@ -8994,7 +8996,8 @@ Placeable List:
       type: :cexolocstr
       str_ref: 14565
       value: 
-        0: Die Tore sind zu schliessen.
+        0: "Die Westm\xE4rkische Vereinigung der F\xF6rster, Imker, J\xE4ger & Waldl\xE4ufer\n\n\
+          Benutzung der R\xE4ume nach bestem Gewissen und der klaren Seel der Waidleut. Tut, wie es Euch getan werden wollt."
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
@@ -9008,7 +9011,7 @@ Placeable List:
       type: :cexolocstr
       str_ref: 14561
       value: 
-        0: "Westm\xE4rkische Vereinigung der F\xF6rster, Imker & J\xE4ger"
+        0: "Westm\xE4rkische Vereinigung der F\xF6rster, Imker, J\xE4ger & Waldl\xE4ufer"
     Lockable: {type: :byte, value: 0}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: ""}
