Dachs, Ratte: remove AB, add weapon finesse feat
refs #395

--- a/mod/utc/dachs.utc.yml
+++ b/mod/utc/dachs.utc.yml
@@ -36,6 +36,7 @@ FeatList:
   type: :list
   value: 
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 354}}
+  - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 42}}
   - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 289}}
 FirstName: 
   type: :cexolocstr
