--- a/mod/area/gabelstr_nord_10.git.yml
+++ b/mod/area/gabelstr_nord_10.git.yml
@@ -9,7 +9,6 @@ AreaProperties:
     AmbientSndDayVol: {type: :int, value: 32}
     AmbientSndNight: {type: :int, value: 51}
     AmbientSndNitVol: {type: :int, value: 32}
-    Comment: {type: :cexostr, value: ""}
     EnvAudio: {type: :int, value: 89}
     MusicBattle: {type: :int, value: 0}
     MusicDay: {type: :int, value: 1}
@@ -21,8 +20,71 @@ Creature List:
 
 Door List: 
   type: :list
-  value: []
-
+  value: 
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 8
+    AnimationState: {type: :byte, value: 0}
+    Appearance: {type: :dword, value: 0}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: -1.5708}
+    CloseLockDC: {type: :byte, value: 0}
+    Comment: {type: :cexostr, value: ""}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 60}
+    Description: 
+      type: :cexolocstr
+      str_ref: 9074
+      value: 
+        0: This heavy stone door is very sturdy.
+    DisarmDC: {type: :byte, value: 20}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 28}
+    GenericType_New: {type: :dword, value: 217}
+    HP: {type: :short, value: 60}
+    Hardness: {type: :byte, value: 8}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: nord_10_mausoleum_2_nord_10}
+    LinkedToFlags: {type: :byte, value: 1}
+    LoadScreenID: {type: :word, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 14452
+      value: 
+        0: Stone Door 08i
+    Lockable: {type: :byte, value: 0}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: door_click}
+    OnClosed: {type: :resref, value: door_closed}
+    OnDamaged: {type: :resref, value: door_damaged}
+    OnDeath: {type: :resref, value: door_death}
+    OnDisarm: {type: :resref, value: door_disarm}
+    OnFailToOpen: {type: :resref, value: door_failtoopen}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: door_lock}
+    OnMeleeAttacked: {type: :resref, value: door_attacked}
+    OnOpen: {type: :resref, value: door_open}
+    OnSpellCastAt: {type: :resref, value: door_spellcast}
+    OnTrapTriggered: {type: :resref, value: door_traptrig}
+    OnUnlock: {type: :resref, value: door_unlock}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 28}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 1013}
+    Ref: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: nord_10_2_nord_10_mausoleum}
+    TemplateResRef: {type: :resref, value: ctp_door_08i}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 2}
+    Will: {type: :byte, value: 15}
+    X: {type: :float, value: 73.87}
+    Y: {type: :float, value: 75.0}
+    Z: {type: :float, value: 0.5}
 Encounter List: 
   type: :list
   value: 
