Huegel Feste: interior areas, fixes
p_hueter060610

neu:
* Innengebiete der zwei Aussenposten hinzugefuegt
* Owens Kriegshandwerk Innengebiet hinzugefuegt
* Owen hinzugefuegt
* Ein Stallwart ist nun vor der Festung

veraendert:
* Sitzflaechen in huegel_hfeste_pr hinzugefuegt
* Sitzflaechen im Arnwald Hueterlager (hoffendlich) richtig ausgerichtet
* Lagerkiste in huegel_hfeste_pr hinzugefugt
* Uebergang auf dem weg zur Festung fixed
* Ein Eintrittspunkt im Burg Aussengebiet neu ausgerichtet
* Kleine Uebergangs-logik Fehler beseitigt
* Die Kaminstube sieht nun hoffendlich wohnlicher aus

refs #343

--- a/mod/area/huegel_s03_o01.git.yml
+++ b/mod/area/huegel_s03_o01.git.yml
@@ -592,7 +592,7 @@ Door List:
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
     Bearing: {type: :float, value: -1.5708}
-    CloseLockDC: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 20}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 20}
     Description: 
@@ -607,17 +607,17 @@ Door List:
     HP: {type: :short, value: 20}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
+    KeyName: {type: :cexostr, value: key_ranger_outpost}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: huegel_s03_o01_indoor1}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
       str_ref: 14453
       value: 
         0: Strong Door 02a
-    Lockable: {type: :byte, value: 0}
+    Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: door_click}
     OnClosed: {type: :resref, value: door_closed}
@@ -633,11 +633,11 @@ Door List:
     OnTrapTriggered: {type: :resref, value: door_traptrig}
     OnUnlock: {type: :resref, value: door_unlock}
     OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 28}
+    OpenLockDC: {type: :byte, value: 20}
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 600}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: CTP_StrongDoor_02a}
+    Tag: {type: :cexostr, value: huegel_s03_o01_outdoor}
     TemplateResRef: {type: :resref, value: ctp_door_02a}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
