--- a/mod/area/huegel_s04_o01.git.yml
+++ b/mod/area/huegel_s04_o01.git.yml
@@ -583,7 +583,7 @@ Door List:
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
     Bearing: {type: :float, value: -0.0}
-    CloseLockDC: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 20}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 20}
     Description: 
@@ -598,18 +598,18 @@ Door List:
     HP: {type: :short, value: 20}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: ""}
-    LinkedToFlags: {type: :byte, value: 0}
+    KeyName: {type: :cexostr, value: key_ranger_outpost}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: huegel_s04_o01_indoor1}
+    LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
       str_ref: 14453
       value: 
-        0: Strong Door 02a
-    Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 1}
+        0: "Verst\xE4rkte T\xFCr"
+    Lockable: {type: :byte, value: 1}
+    Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: door_click}
     OnClosed: {type: :resref, value: door_closed}
     OnDamaged: {type: :resref, value: door_damaged}
@@ -624,11 +624,11 @@ Door List:
     OnTrapTriggered: {type: :resref, value: door_traptrig}
     OnUnlock: {type: :resref, value: door_unlock}
     OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 28}
+    OpenLockDC: {type: :byte, value: 20}
     Plot: {type: :byte, value: 0}
     PortraitId: {type: :word, value: 600}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: CTP_StrongDoor_02a}
+    Tag: {type: :cexostr, value: huegel_s04_o01_outdoor}
     TemplateResRef: {type: :resref, value: ctp_door_02a}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -8390,10 +8390,10 @@ WaypointList:
     Tag: {type: :cexostr, value: WP_huegel_o04_o01_s3}
     TemplateResRef: {type: :resref, value: ""}
     XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 75.2904}
+    XPosition: {type: :float, value: 77.7248}
     YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 3.1893}
-    ZPosition: {type: :float, value: -0.6365}
+    YPosition: {type: :float, value: 2.826}
+    ZPosition: {type: :float, value: -0.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 5
     Appearance: {type: :byte, value: 1}
