--- a/mod/mod/Makefile
+++ b/mod/mod/Makefile
@@ -3,4 +3,4 @@ include ../Makefile.resource
 .PHONY: module.ifo
 module.ifo: module.ifo.yml
 	nwn-gff $(EXPORT_FILTERS) -ly -i $< -kg -o $@
-	update-ifo.pl ../area/\*.are
+	PERLLIB=../../build/lib ../../build/update-ifo.pl ../area/\*.are
