--- a/mod/nss/Makefile
+++ b/mod/nss/Makefile
@@ -6,7 +6,7 @@ clean:
 clean-stale:
 	@for x in *.n[cs]s; do [ -f `echo $$x |cut -d. -f1`.n ] || rm -v $$x; done
 
-NCC=nwnnsscomp
+NCC=../../build/nwnnsscomp
 NCCFLAGS=-g -c -q -o
 NSSVERIFYFLAGS=-g -o -q -t4
 
