Haus der Liebe -> Haus Sharess
f_150610 - Das Haus Sharess Glueck
* removed gabel_hdl_* maps
* added gabel_sharess
* modified gabel_west (changed transition from gabel_hdl_main to gabel_sharess)

--- a/mod/area/gabel_west.git.yml
+++ b/mod/area/gabel_west.git.yml
@@ -3638,7 +3638,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 30}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 50}
@@ -4044,8 +4044,8 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
-    CloseLockDC: {type: :byte, value: 0}
+    Bearing: {type: :float, value: 3.1416}
+    CloseLockDC: {type: :byte, value: 30}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 10}
     Description: 
@@ -4059,16 +4059,16 @@ Door List:
     HP: {type: :short, value: 10}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 1}
-    LinkedTo: {type: :cexostr, value: gabel_HDL_2_gabel_west}
+    KeyName: {type: :cexostr, value: key_sharess_haupt}
+    KeyRequired: {type: :byte, value: 0}
+    LinkedTo: {type: :cexostr, value: gabel_sharess_main}
     LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
       type: :cexolocstr
-      value: {}
-
-    Lockable: {type: :byte, value: 0}
+      value: 
+        4: ""
+    Lockable: {type: :byte, value: 1}
     Locked: {type: :byte, value: 0}
     OnClick: {type: :resref, value: door_click}
     OnClosed: {type: :resref, value: door_closed}
@@ -4084,11 +4084,11 @@ Door List:
     OnTrapTriggered: {type: :resref, value: door_traptrig}
     OnUnlock: {type: :resref, value: door_unlock}
     OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 0}
+    OpenLockDC: {type: :byte, value: 30}
     Plot: {type: :byte, value: 1}
     PortraitId: {type: :word, value: 558}
     Ref: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: gabel_west_2_gabel_HDL}
+    Tag: {type: :cexostr, value: gabel_w_sharess}
     TemplateResRef: {type: :resref, value: door_unbreak}
     TrapDetectDC: {type: :byte, value: 0}
     TrapDetectable: {type: :byte, value: 1}
@@ -4715,7 +4715,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 10}
@@ -5972,7 +5972,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 67}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -6675,7 +6675,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 139}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -24010,6 +24010,71 @@ Placeable List:
     X: {type: :float, value: 60.7382}
     Y: {type: :float, value: 60.1744}
     Z: {type: :float, value: -0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 9
+    AnimationState: {type: :byte, value: 0}
+    Appearance: {type: :dword, value: 138}
+    AutoRemoveKey: {type: :byte, value: 0}
+    Bearing: {type: :float, value: -0.0}
+    BodyBag: {type: :byte, value: 0}
+    CloseLockDC: {type: :byte, value: 0}
+    Conversation: {type: :resref, value: ""}
+    CurrentHP: {type: :short, value: 15}
+    Description: 
+      type: :cexolocstr
+      str_ref: 14560
+      value: 
+        0: "Ein sorgf\xE4ltig hergestelltes Schild, das eine interessante Stelle markiert."
+    DisarmDC: {type: :byte, value: 15}
+    Faction: {type: :dword, value: 1}
+    Fort: {type: :byte, value: 16}
+    HP: {type: :short, value: 15}
+    Hardness: {type: :byte, value: 5}
+    HasInventory: {type: :byte, value: 0}
+    Interruptable: {type: :byte, value: 1}
+    KeyName: {type: :cexostr, value: ""}
+    KeyRequired: {type: :byte, value: 0}
+    LocName: 
+      type: :cexolocstr
+      str_ref: 14561
+      value: 
+        0: "Gl\xFCck Sharess"
+    Lockable: {type: :byte, value: 0}
+    Locked: {type: :byte, value: 0}
+    OnClick: {type: :resref, value: ""}
+    OnClosed: {type: :resref, value: ""}
+    OnDamaged: {type: :resref, value: ""}
+    OnDeath: {type: :resref, value: ""}
+    OnDisarm: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnInvDisturbed: {type: :resref, value: ""}
+    OnLock: {type: :resref, value: ""}
+    OnMeleeAttacked: {type: :resref, value: ""}
+    OnOpen: {type: :resref, value: ""}
+    OnSpellCastAt: {type: :resref, value: ""}
+    OnTrapTriggered: {type: :resref, value: ""}
+    OnUnlock: {type: :resref, value: ""}
+    OnUsed: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    OpenLockDC: {type: :byte, value: 18}
+    Plot: {type: :byte, value: 0}
+    PortraitId: {type: :word, value: 496}
+    Ref: {type: :byte, value: 0}
+    Static: {type: :byte, value: 0}
+    Tag: {type: :cexostr, value: MerchantsShingle1}
+    TemplateResRef: {type: :resref, value: plc_billboard1}
+    TrapDetectDC: {type: :byte, value: 0}
+    TrapDetectable: {type: :byte, value: 1}
+    TrapDisarmable: {type: :byte, value: 1}
+    TrapFlag: {type: :byte, value: 0}
+    TrapOneShot: {type: :byte, value: 1}
+    TrapType: {type: :byte, value: 0}
+    Type: {type: :byte, value: 0}
+    Useable: {type: :byte, value: 1}
+    Will: {type: :byte, value: 0}
+    X: {type: :float, value: 86.3955}
+    Y: {type: :float, value: 13.3306}
+    Z: {type: :float, value: 0.2031}
 SoundList: 
   type: :list
   value: 
